# digital_market

./: .dockerignore  .env  .gitignore  Dockerfile  README.md  docker-compose.yaml  manage.py  nginx.conf  pyproject.toml  utils.py
core/: admin.py  models.py  serializers.py  urls.py  views.py
core/migrations/: 0001_initial.py
digital_market/: __init__.py  asgi.py  settings.py  urls.py  wsgi.py
supplier/: admin.py  filters.py  models.py  permissions.py  routers.py  serializers.py  urls.py  views.py
supplier/migrations/: 0001_initial.py  0002_alter_factory_contact_alter_factory_debt_and_more.py  0003_alter_factory_contact_alter_factory_product_and_more.py
